fixed uneven dialog box buttons and removed improper commented line

--- a/static/css/grid.css
+++ b/static/css/grid.css
@@ -53,7 +53,6 @@ table.chucho-grid thead tr
 
 table.chucho-grid {
     border-collapse: separate;
-    //border-color: gray;
 }
 
 table.chucho-grid tbody tr {
@@ -130,7 +129,10 @@ div.grid
     border: none !important;
 }
 
-
+.modal-footer .btn+.btn.btn-defualt {
+    margin-left: 5px;
+    margin-bottom: 5px;
+}
 
 
 
